tests/fixtures/invalid/pow_float_set_set.py
# Cannot call pow() with Float, Set[int], Set[int]
x = pow(1.0, {1, 2, 3}, {1, 2, 3})
